[gd_scene load_steps=9 format=3 uid="uid://bqwsupbv48ac3"]

[ext_resource type="Script" path="res://scenes/cute_cat/cute_cat.gd" id="1_asikj"]
[ext_resource type="Texture2D" uid="uid://baew4mjjl0ocs" path="res://scenes/cute_cat/assets/ready.png" id="2_d1k2n"]
[ext_resource type="Texture2D" uid="uid://bqver8lhn6vhj" path="res://scenes/cute_cat/assets/cute.png" id="2_v4w1q"]
[ext_resource type="Texture2D" uid="uid://2elhabu2047w" path="res://scenes/cute_cat/assets/gauge_background.png" id="3_faj8p"]
[ext_resource type="Texture2D" uid="uid://f56n47hojjdm" path="res://scenes/cute_cat/assets/gauge_indicator.png" id="4_4d2do"]
[ext_resource type="PackedScene" uid="uid://c06eo3bab3n6s" path="res://common/shaky_camera.tscn" id="5_6umey"]
[ext_resource type="AudioStream" uid="uid://crxfh5hd7kxlc" path="res://scenes/cute_cat/assets/push.wav" id="6_t0chd"]
[ext_resource type="AudioStream" uid="uid://dtijrgmy30ryw" path="res://scenes/cute_cat/assets/wow.mp3" id="7_cbsms"]

[node name="CuteCat" type="Node2D"]
script = ExtResource("1_asikj")
cute_cat_texture = ExtResource("2_v4w1q")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(655, 310)
texture = ExtResource("2_d1k2n")

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
offset_left = 19.0
offset_top = 59.0
offset_right = 219.0
offset_bottom = 559.0
step = 0.1
fill_mode = 3
texture_under = ExtResource("3_faj8p")
texture_progress = ExtResource("4_4d2do")

[node name="ChillTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Camera2D" parent="." instance=ExtResource("5_6umey")]
anchor_mode = 0

[node name="PushSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_t0chd")

[node name="WinSfx" type="AudioStreamPlayer2D" parent="."]
modulate = Color(1, 0, 1, 1)
stream = ExtResource("7_cbsms")

[node name="NextButton" type="Button" parent="."]
visible = false
offset_left = 735.0
offset_top = 540.0
offset_right = 1128.0
offset_bottom = 622.0
theme_override_font_sizes/font_size = 40
text = "Next"

[node name="EndTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ChillTimer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
